airshift - fixed add to cart button center problem

--- a/Day- Ex5 - Airshift/css/style.css
+++ b/Day- Ex5 - Airshift/css/style.css
@@ -7010,6 +7010,11 @@ p {
 #product-desc-tab a.active {
   background-color: #e42329 !important; }
 
+.product-link__text {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
 .jumbotron-career {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../assets/Career/pexels-pavel-danilyuk-6443531.jpg); }
 
